src/App.css
/* ... */
.active.nav-link.admn-vendor-portal {
  color: #324d5c !important;
  font-weight: 700;
  background-color: rgb(255, 255, 255) !important;
  border-radius: 3px !important;
}

.griz-real-body {
  margin-top: 6%;
}

a:not([href]):not([tabindex]).active {
  text-decoration: none;
  border-bottom: 4px solid #46b29d;
}

a:not([href]):not([tabindex]) {
  text-decoration: none;
}

.nav-link.active {
  background-color: #324d5c !important;
}

/* Product Carousel */

.img-thumbnail {
  padding: 0.25rem;
  background-color: #fff;
  border: none !important;
  border-radius: 0.3rem !important;
  max-width: 100%;
  height: auto;
}

/* Product Grids */

.product-card {
  line-height: 1.2;
}

.card.product-card {
  border: none;
}

.card-body {
  text-align: center;
}

.card-body.inner-product-card {
  border-top: 1px solid #f0f4f7;
  margin-top: 5px;
}

.inner-product-card:hover,
.inner-product-card > a:not([href]):hover,
a:-webkit-any-link {
  text-decoration: none;
}

.inner-product-card {
  color: black;
  padding-left: 0;
  padding-right: 0;
}

.inner-product-card.card-text {
  text-transform: capitalize;
  text-overflow: ellipsis;
}

.product-name {
  color: black;
}

.imageGrid {
  display: flex;
  flex-flow: wrap;
  object-fit: cover;
}

.straight-grid {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.nav-bar-profile-img {
  object-fit: cover;
  width: 30px;
  height: 30px;
  border-radius: 50%;
}

.main-profile-img {
  object-fit: cover;
  width: 100px;
  height: 100px;
  border-radius: 50%;
}

.dropdown-menu.right-anchor {
  right: 0 !important;
  left: -100px;
}

/* Detailed Product */
.left-border-line {
  border-left: 1px solid #777777;
}

.bottom-border-line {
  border-bottom: 1px solid #bdbdbd;
}

.minimal-line-input-div input {
  border: none;
  box-shadow: none;
  border-bottom: 1px solid #777777;
}

.minimal-line-input-div input:focus {
  outline: #e9e9e9 auto 1px;
}

/*categoryscrolllist*/
.cat-scroll {
  max-height: 7cm;
  overflow: auto;
}

.cat-scroll-button {
  min-width: 200px;
  max-width: 250px;
  overflow: auto;
}

/* Admin/Vendor Portal */
.collapsable-block-appearance > .collapsable-block-trigger:parent {
  display: none;
}

.toggle-portal-appearance > .toggle-portal-trigger:parent {
  display: none;
}

/*vendorscrolllist*/
.vendor-scroll {
  max-height: 7cm;
  overflow: auto;
  max-width: 250px;
}

.vendor-scroll-button {
  min-width: 200px;
  max-width: 250px;
  overflow: auto;
}

/* Profile sidebar */
.profile-bg-color {
  background-color: #859ca8;
}

.profile-header {
  text-align: left;
  text-emphasis: bold;
  font-size: 20px;
}

.profile-header-text {
  background: #e0e0e0;
  padding-left: 5%;
  margin-bottom: 10px;
  text-transform: uppercase;
  padding-top: 0.4em;
  padding-bottom: 0.4em;
}

.profile-header-button {
  color: black;
  float: right;
  padding-top: 0.05em;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0.4em;
}

.profile-userpic img {
  float: none;
  margin: 0 auto;
  width: 50%;
  height: 50%;
  -webkit-border-radius: 30% !important;
  -moz-border-radius: 30% !important;
  border-radius: 30% !important;
}

.profile-userpic > img {
  max-width: 100px;
  max-height: 100px;
}

.profile-header::before {
  left: 0;
  right: 0;
  top: 0;
}

.profile-header-text {
  color: black;
}

.profile-usertitle-title {
  font-size: 1.2em;
}

.profile-usertitle-info {
  text-transform: uppercase;
  font-size: 0.7em;
  margin-bottom: 15px;
}

.profile-userbuttons {
  text-align: center;
  margin-top: 10px;
}

.profile-userbuttons .btn {
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  padding: 6px 15px;
  margin-right: 5px;
}

.profile-userbuttons .btn:last-child {
  margin-right: 0px;
}

.profile-usermenu ul li {
  border-bottom: 1px solid #f0f4f7;
}

.profile-usermenu ul li:last-child {
  border-bottom: none;
}

.profile-usermenu ul li a {
  color: #93a3b5;
  font-size: 14px;
  font-weight: 400;
}

.profile-usermenu ul li a i {
  margin-right: 8px;
  font-size: 14px;
}

.profile-usermenu ul li a:hover {
  background-color: #fafcfd;
  color: #5b9bd1;
}

.profile-usermenu ul li.active {
  border-bottom: none;
}

.profile-usermenu ul li.active a {
  color: #5b9bd1;
  background-color: #f6f9fb;
  border-left: 2px solid #5b9bd1;
}

.profile {
  margin: 20px 0;
}

.align-center {
  align-content: center;
}

.flex-grow-04 {
  flex-grow: 0.4;
}

.profile-small-subtitle {
  text-transform: uppercase;
  font-size: 0.7em;
  color: rgb(201, 201, 201);
}

.profile-small-link {
  text-transform: uppercase;
  font-size: 0.6em;
  color: rgb(201, 201, 201);
  text-decoration-line: underline;
  text-decoration-color: #46b29d;
  text-decoration-style: solid;
}

.profile-content {
  padding: 20px;
  background: #fff;
  min-height: 460px;
}

/* Search bar */

.btn-group.aligned-left {
  text-align: left;
}

/* View a Product */

.bottom-heavy {
  vertical-align: bottom;
}

/* Colours */
a {
  color: #46b29d;
}

a:hover {
  color: #324d5c;
}

.hover-w-b:hover,
.hover-t-b {
  color: white;
  background-color: #45b29d;
  border-color: #45b29d;
}

.hover-t-b:hover,
.hover-w-b {
  color: #46b29d;
  background-color: white;
  border-color: #45b29d;
}

.plain-b {
  color: white;
  background-color: rgb(167, 167, 167);
  border-color: rgb(167, 167, 167);
}

.profile-blue-color {
  color: #6d94af;
}

.plain-b:hover {
  color: #324d5c;
  background-color: white;
  border-color: #324d5c;
}

.red-b {
  color: white;
  background-color: #de5b49;
  border-color: #de5b49;
}

.red-b:hover {
  color: #de5b49;
  background-color: white;
  border-color: #de5b49;
}

.red-alert-minimal-button {
  color: #de5b49;
}

.red-alert-minimal-button:hover {
  color: #de5b49;
  text-decoration: 1px solid #de5b49;
}

.blue-b {
  color: white;
  background-color: #324d5c;
  border-color: #324d5c;
}
/* ... */

